--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 How to get started
 
-- [Install GDevelop](https://gdevelop-app.com/download/)
+[Install GDevelop](https://gdevelop-app.com/download/)
 
-- Open the game.json file
+Open the game.json file
 
 That's it
