--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 How to get started
 
-[Install GDevelop](https://gdevelop-app.com/download/)
+Download and install the latest GDevelop 
+- https://gdevelop-app.com/download/
 
-Open the game.json file
+Startup GDevelop
 
-That's it
+Open Project and select game.json
+
+That's it!
